# 20210531-quantum-seminar

./: README.md  common.py  hayden_preskill_blackhole.py  phase_transition.py  pyproject.toml
output/: 0628_n08.tsv  0628_n12.tsv  0912_odd_n08.tsv  0912_odd_n12.tsv  0912_odd_n16.tsv  0912_odd_n20.tsv  0914_odd_n08.tsv  0914_odd_n12.tsv  0914_odd_n16.tsv  0915_all_n08.tsv  0915_all_n12.tsv  0915_all_n16.tsv  0915_all_n20.tsv  20210621_182945_hp_n09_k01_r10.tsv  20210621_185927_hp_n09_k01_r10.tsv  20210628_144455_hp_n09_k01_r10_haar.tsv  20210628_145529_hp_n09_k01_r10_haar.tsv  20210628_152307_hp_n09_k01_r10_haar.tsv  20210628_152553_hp_n09_k01_r10_lrc_depth10.tsv  20210628_153921_hp_n09_k01_r10_lrc_depth10.tsv  20210628_153947_hp_n09_k01_r10_lrc_depth100.tsv  20210628_182449_pt_n08_d10_r32.tsv  20210628_182811_pt_n08_d10_r32.tsv  20210628_184526_pt_n08_d32_a1_r01.tsv  20210628_184636_pt_n08_d32_a1_r01.tsv  20210628_185735_pt_n08_d32_a1_r10.tsv  20210628_185913_pt_n12_d48_a1_r01.tsv  20210628_190017_pt_n12_d48_a1_r10.tsv  20210628_190414_pt_n12_d48_a1_r100.tsv  20210628_193151_pt_n08_d32_a1_r100.tsv  20210712_163845_pt_n08_d32_a2_r30.tsv  20210712_163845_pt_n08_d32_a2_r30.txt  20210712_163939_pt_n08_d32_a2_r30.tsv  20210712_163939_pt_n08_d32_a2_r30.txt  20210712_164417_pt_n12_d48_a2_r30.tsv  20210712_164417_pt_n12_d48_a2_r30.txt  20210712_164431_pt_n12_d48_a2_r100.tsv  20210712_164431_pt_n12_d48_a2_r100.txt  20210712_165531_pt_n12_d48_a2_r100.tsv  20210712_165531_pt_n12_d48_a2_r100.txt  (+91 more)
